# proxmiko-x-tools

./: CMakeLists.txt  README.md
assets/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  switchwidget.cpp  switchwidget.h
